
<resources>
    <string name="app_name">TimeTrack</string>
    <string name="time_tracking_app">Time tracking app</string>
    <string name="btn_sync">Sync</string>
    <string name="btn_home">Home</string>
    <string name="btn_back">Back</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_history">History</string>
    <string name="btn_save">Save</string>
    <string name="select_task">Select Task</string>
</resources>