<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
<variable
    name="trackViewModel"
    type="com.example.timetrack.TrackActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/taskHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/time_tracking_app"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_primary"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/taskName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:text="@{String.valueOf(trackViewModel.title)}"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_primary"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/startButton"
            android:layout_width="137dp"
            android:layout_height="55dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="143dp"
            android:onClick="@{() ->trackViewModel.flipStopwatch()}"
            android:text="@{String.valueOf(trackViewModel.startstop)}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskHeader" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="137dp"
            android:layout_height="55dp"
            android:layout_marginTop="143dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{() ->trackViewModel.resetTimer()}"
            android:text="@string/btn_reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskHeader" />

        <TextView
            android:id="@+id/timeViewer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(trackViewModel.time)}"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_primary"
            android:textSize="68sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.50" />

        <Button
            android:id="@+id/historyBotton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="88dp"
            android:text="@string/btn_history"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeViewer"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="88dp"
            android:onClick="@{() ->trackViewModel.saveTime() }"
            android:text="@string/btn_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/historyBotton"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeViewer"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/trackHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="88dp"
            android:text="@string/btn_home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/historyBotton"
            app:layout_constraintTop_toBottomOf="@+id/timeViewer"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>